--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -5,6 +5,8 @@ body {
     background-size: cover;
 }
 
+.logo { border:1px solid #b3b3b3; border-radius:50px; padding:18px 18px 10px 18px; margin:0 auto;}
+
 .row { margin-bottom:35px; }
 
 form { background-color: #DADADA; padding:25px; }
