--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -5,6 +5,8 @@ body {
     background-size: cover;
 }
 
+.display-3 { line-height:1.0; }
+
 .logo { border:1px solid #b3b3b3; border-radius:50px; padding:18px 18px 10px 18px; margin:0 auto; width:90px;}
 
 .row { margin-bottom:15px; }
