--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -7,7 +7,33 @@ body {
 
 .display-3 { line-height:1.0; }
 
-.logo { border:1px solid #b3b3b3; border-radius:50px; padding:18px 18px 10px 18px; margin:0 auto; width:90px;}
+.logo { 
+    border:1px solid #b3b3b3; border-radius:50px; padding:18px 18px 10px 18px; margin:0 auto; width:90px;
+}
+
+.glowing {
+    border-color: #ffc107;
+    
+    animation:pulse 2s infinite alternate;
+    -webkit-animation:pulse 2s infinite alternate;
+    -moz-animation:pulse 2s infinite alternate;
+    -o-animation:pulse 2s infinite alternate;
+
+    filter:sepia(100%);
+    -webkit-filter:sepia(100%);
+    -moz-filter:sepia(100%);
+    -o-filter:sepia(100%);
+}
+
+@keyframes pulse {
+  from { box-shadow: 2px 5px 15px #ffc107, 0px 0px 20px #fff; }
+  to { box-shadow: 0px 0px 5px #ffc107, 1px 5px 30px #fff; }
+}
+
+@-webkit-keyframes pulse {
+  from { box-shadow: 2px 5px 15px #ffc107, 0px 0px 20px #fff; }
+  to { box-shadow: 0px 0px 5px #ffc107, 1px 5px 30px #fff; }
+}
 
 .row { margin-bottom:15px; }
 
